--- a/project/package.json
+++ b/project/package.json
@@ -10,6 +10,6 @@
   },
   "scripts": {
     "prod": "node-sass sass/style.scss css/style.css -w",
-    "start": "parallelshell 'yarn prod' 'yarn live-server --browser=Chrome'"
+    "start": "parallelshell 'yarn prod' 'yarn live-server --browser=google-chrome'"
   }
 }
